fix:More stories text content alignment

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -223,7 +223,7 @@
     padding-right: 0px;
     width: 300px;
     overflow: hidden;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
     height: 69px;
   }
   footer .other-links {
